[project]
name = "yazm-py"
version = "0.1.0"
description = "A Z-machine interpreter in Python, targeting v3 story files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
yazm = "yazm.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-coverage>=0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/_sample_data.py" = ["E501"]
